# ufsc-update-notifier

./: .gitignore  README.md  index.py  pyproject.toml
email-register-api/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package.json
email-register-api/config/: .env.example
email-register-api/public/: index.html
email-register-api/src/: index.ts
email-register-api/src/api/: routes.ts  server.ts
email-register-api/src/api/middlewares/: deleteEmailEndpoint.ts  errorHandlerMiddleware.ts  saveEmailEndpoint.ts
email-register-api/src/data/: fsDataProvider.ts
email-register-api/src/errors/: alreadyRegisteredEmail.ts  application.ts  missingEnvVar.ts  notRegisteredEmail.ts
email-register-api/src/interfaces/: baseService.ts  dataProvider.ts
email-register-api/src/services/: deleteEmailService.ts  saveEmailService.ts
email-register-api/src/swagger/: swagger.json
email-register-api/src/utils/: getEnv.ts  logger.ts
ufsc_update_notifier/: main.py
worker-scraper/: .env.example  .gitignore  README.md  pyproject.toml
worker-scraper/ufsc_update_notifier/: main.py
worker-scraper/ufsc_update_notifier/errors/: application.py  crawling.py  mailing.py  missingEnvVar.py
